Making legend elements wrap in IE. resolves #269

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -376,7 +376,9 @@ body {
     }
 
     legend {
+        display: table;
         font: inherit;
+        white-space: normal;
     }
     label {
         margin-top: inherit;
